[package]
name = "ens160-aq"
version = "0.1.0"
edition = "2021"

authors = ["fordauthor42@gmail.com"]
repository = "https://github.com/marvinrobot42/ens160-aq.git"
description = "ScioSense ENS160 driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MIT OR Apache-2.0"
keywords = ["sensor", "i2c", "ens160", "air quality", "sciosense"]
categories = ["embedded", "no-std"]
publish = true
exclude = [
    ".gitattributes",
    ".drone.yml",
    ".pre-commit-config.yaml",
    "Makefile.toml",
]

[features]
default = []

[dependencies]
log = { version = "0.4.18", default-features = false }
libm = "0.2.8"
byteorder = { version = "1", default-features = false }
embedded-hal = { version = "0.2" }
num-traits = { version = "0.2", default-features = false }
bitfield = "0.14.0"
